fix :  z-index for widget

--- a/assets/insighto.css
+++ b/assets/insighto.css
@@ -11,11 +11,11 @@ body {
   bottom: 4.5rem;
   border-top-right-radius: 0.8rem;
   border-top-left-radius: 0.8rem;
-  z-index: 20;
+  z-index: 200000;
 }
 #openCloseWidget {
   position: fixed;
-  z-index: 20;
+  z-index: 200000;
   right: 1rem;
   bottom: 1rem;
   border-radius: 34px;
@@ -36,7 +36,7 @@ body {
   right: 1rem;
   bottom: 4rem;
   font-family: "Segoe UI", Helvetica, sans-serif !important;
-  z-index: 20;
+  z-index: 200000;
   width: 250px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 0.5rem;
@@ -67,7 +67,7 @@ body {
   right: 10px;
   cursor: pointer;
   top: 5px;
-  z-index: 50;
+  z-index: 250000;
   transition: all ease-in 300ms;
 }
 #closeWidgetIcon:hover {
@@ -81,7 +81,7 @@ body {
 }
 .chat__WidgetSmall {
   width: 100%;
-  z-index: 30;
+  z-index: 200000;
   border-radius: 0;
   height: 100svh;
   left: 0;
